fix: th align (#485)

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -729,7 +729,7 @@
 
 .@{prefix}-table__th-row-select {
   .t-table__th-cell-inner {
-    display: flex;
+    display: inline-flex;
     align-items: center;
   }
 }
